--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-	"author": "Alex Galashov",
-	"name": "LiquidLava",
-	"version": "0.2.1",
-
-	"devDependencies" : {
-		"grunt": ">= 0.4.4",
-		"grunt-cli": ">= 0.1.13",
-		"grunt-contrib-concat": ">=0.4.0",
-		"highlight.js": "=8.0.0"
-	}
+  "author": "Alex Galashov",
+  "name": "LiquidLava",
+  "version": "0.0.0",
+  "devDependencies": {
+    "grunt": ">= 0.4.4",
+    "grunt-cli": ">= 0.1.13",
+    "grunt-contrib-concat": ">=0.4.0",
+    "highlight.js": "=8.0.0",
+    "marked": "~0.3.2",
+    "grunt-jsdoc": "~0.5.6",
+    "jsdoc": "~3.3.0-alpha9"
+  }
 }
