--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "grunt-cli": ">= 0.1.13",
     "grunt-contrib-concat": ">=0.4.0",
     "highlight.js": "=8.0.0",
-    "marked": "~0.3.2",
-    "grunt-jsdoc": "~0.5.6",
-    "jsdoc": "~3.3.0-alpha9"
+    "marked": "~0.3.2"
   }
 }
