--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "version": "0.0.0",
   "devDependencies": {
     "grunt": ">= 0.4.4",
-    "grunt-cli": ">= 0.1.13",
-    "grunt-contrib-concat": ">=0.4.0",
-    "highlight.js": "=8.0.0",
-    "marked": "~0.3.2"
+    "grunt-cli": ">= 0.1.13"
   }
 }
