Corrected .npmignore and some other insignificant changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node\_modules
-\.idea
-\.ssh
+/node_modules
+/.idea
+/.ssh
 
-lib/packages/all-classes-compiled.js
+/lib/packages/all-classes-compiled.js
