--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
   "license": "MIT",
   "dependencies": {
     "firestorm": "= 0.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.2.0"
+  },
+  "scripts": {
+    "test": "karma start karma.conf.js"
   }
 }
