--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "framework"
   ],
   "license": "MIT",
-  "dependencies": {
-    "firestorm": "= 0.2"
-  },
   "devDependencies": {
+    "browserify": "^14.0.0",
     "chai": "^3.5.0",
+    "chai-spies": "^0.7.1",
     "karma": "^1.3.0",
+    "karma-browserify": "^5.1.1",
     "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
