--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
     - "node"
 before_script:
     - npm install
-script: node_modules/karma/.bin/karma start karma.conf.js --single-run
+script: node_modules/karma/bin/karma start karma.conf.js --single-run
 before_install:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
