--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
     - "node"
-before_script:
-    - npm install
-script: node_modules/karma/bin/karma start karma.conf.js --single-run
 before_install:
+    - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
+script: node_modules/karma/bin/karma start karma.conf.js --single-run
