--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "karma-chai-spies": "^0.1.4",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.2.0"
   },
