--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
+    "karma-fixture": "^0.2.6",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.2.0"
   },
